C1
File "<input>", line 1
    cylinder.Placement = FreeCAD.Placement(
                                          ^
SyntaxError: '(' was never closed
